--- a/Jeu de vie/index.html
+++ b/Jeu de vie/index.html
@@ -5,19 +5,34 @@
         <title>Jeu de la vie</title>
         <link rel="stylesheet" href="style.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
         <h1></h1>
-        <div class="block">
-            <div class="vie">
-                
+        <div class="container row">
+            <div class='col'>
+                <div class='vie'>
+
+                </div>
+                <div id="qtip-1" ></div>
             </div>
-            <div class="formulaire">
-                <button class="boutton" type="button" onclick="displayTab(50,50)">Aléatoire</button>
-                <button class="boutton" type="button" onclick="isAlive(tab)">Lancer</button>
-            </div>
+        </div>
+        <div class="formulaire col">
+            <button class="btn btn-primary" type="button" onclick="displayVal()">Aléatoire</button>
+            <button class="btn btn-primary" type="button" onclick="isAlive(true)">Lancer</button>
+            <div class="dimensions">
+                <div class="form-group">
+                    <label for="ligne" class='text-center w-100 text-info'>Nombre de ligne</label>
+                    <input type="number" id="ligne" name="ligne" placeholder="x: ..." class='form-control' value="50">
+                    </div>
+                    <div class="form-group">
+                        <label for="colonne">Nombre de colonne</label>
+                        <input type="number" id="colonne" name="colonne" placeholder="y: ..." class='form-control' value="50">
+                    </div>
+                </div>
         </div>
         
         <script src="test.js"></script>
+
     </body>
 </html>
